# tree-sitter-cangjie

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  readme.md  setup.py  tree-sitter.json
bindings/c/: tree-sitter-cangjie.pc.in
bindings/c/tree_sitter/: tree-sitter-cangjie.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cangjie/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCangjieTests/: TreeSitterCangjieTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: array.cj  block.cj  comment.cj  control.cj  declare.cj  enum.cj  expression.cj  function.cj
test/corpus/: comment.txt  declaration.txt  declare.txt  enum.txt  expression.txt  function.txt
